src/objects/Insurance_and_Care_Providers__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Designated Providers</description>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <description>Full Name</description>
        <label>Provider Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Insurance and Care Providers</label>
</CustomObject>